<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/black"
            android:paddingTop="10dp"
            app:contentInsetEnd="24dp"
            app:contentInsetStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="top|start"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/back"
                android:onClick="onBackPressed"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/action_share"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="top|end"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/share"
                android:onClick="onShareClicked"
                android:scaleType="centerInside"
                android:src="@drawable/ic_share"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.appcompat.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_quotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/quotes"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/champions_name"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_quotes" />


        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/description"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>